--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -13,3 +13,8 @@ en:
     labels:
       organizer_email: 'Organizer email'
       organizer_telegram: 'Organizer telegram'
+    are_you_sure: 'Are you sure?'
+    successful_update: 'Event successfully updated.'
+    successful_create: 'Event successfully created.'
+    error_update: 'Error updating the event.'
+    error_create: 'Error creating the event.'
