--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -81,6 +81,7 @@ en:
       forgot_password: 'Forgot your password?'
       confirmation_instructions_failure: "Didn't receive confirmation instructions?"
       unlock_instructions_failure: "Didn't receive unlock instructions?"
+      admin_sign_in: "Admin sign in"
     unlocks:
       send_instructions: "You will receive an email with instructions for how to unlock your account in a few minutes."
       send_paranoid_instructions: "If your account exists, you will receive an email with instructions for how to unlock it in a few minutes."
