--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,6 +15,6 @@ en:
       organizer_telegram: 'Organizer telegram'
     confirm: 'Are you sure?'
     successful_update: 'Event successfully updated.'
-    successful_create: 'Event successfully created.'
+    successful_create: 'Event sent to moderation.'
     error_update: 'Error updating the event.'
     error_create: 'Error creating the event.'
